# mlir-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Ch-1-dialect/include/tutorial/: TutorialDialect.h  TutorialOps.h
Ch-1/include/tutorial/: CMakeLists.txt  Tutorial.td  TutorialDialect.h  TutorialDialect.td  TutorialOps.h  TutorialOps.td
Ch-1/lib/: CMakeLists.txt  tutorial.cpp
Ch-2-pass/include/tutorial/: CMakeLists.txt  ShapeInferenceInterfaces.h  ShapeInferenceInterfaces.td  TutorialDialect.h  TutorialDialect.td  TutorialOps.h  TutorialOps.td  TutorialPass.h  TutorialPass.td
Ch-2-pass/lib/: CMakeLists.txt  tutorial.cpp
Ch-2-pass/lib/Transformer/: CMakeLists.txt  ConvertTutorialToArithPass.cpp  ShapeInferencePass.cpp
test/Dialect/tutorial/: test_add.mlir  test_constant.mlir  test_transpose.mlir
tools/: CMakeLists.txt
tools/mltu-opt/: CMakeLists.txt  mltu-opt.cpp
